gitops/apps/openwebui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
  labels:
    name: openwebui
